# redfox

./: install_redfox
TPC-H/data/: A  NO_OP.binaryGpu  NO_OP.hir  NO_OP.textGpu  TC.tbl  TC_data_process  TC_data_process.cu  Tuple.h
harmony/: .sconsign.dblite  SConscript  SConstruct  configure.h.in  libprotoc.la  mgpu_join_find_bounds129.library  mgpu_join_find_bounds142.library  mgpu_join_find_bounds155.library  mgpu_join_find_bounds18.library  mgpu_join_find_bounds27.library  mgpu_join_find_bounds36.library  mgpu_join_find_bounds45.library  mgpu_join_find_bounds58.library  mgpu_join_find_bounds9.library  mgpu_join_main11.library  mgpu_join_main131.library  mgpu_join_main144.library  mgpu_join_main157.library  mgpu_join_main20.library  mgpu_join_main29.library  mgpu_join_main38.library  mgpu_join_main47.library  mgpu_join_main60.library  ptxgrammar.hpp  set_count113.library  set_reduce105.library  set_reduce121.library  set_reduce81.library  set_reduce89.library  set_reduce97.library
harmony/.debug_build/hydrazine/implementation/: ArgumentParser.os  Exception.os  LowLevelTimer.os  string.os
harmony/.release_build/: configure.h  harmony-runtime
harmony/.release_build/hydrazine/implementation/: Timer.os  Version.os  debug.os
harmony/harmony/cuda/implementation/: CudaDriver.cpp
harmony/harmony/cuda/include/: common_functions.h  cuda.h  cuda_runtime_api.h  cufft.h  curand_kernel.h  cusparse_v2.h  host_config.h  math_functions.h  nppdefs.h  nppi_compression_functions.h  nppversion.h
harmony/harmony/cuda/interface/: CudaDriver.h
harmony/harmony/hir/implementation/: ControlCall.cpp  ControlFlowGraph.cpp  DataflowInformation.cpp  HirManager.cpp  KernelCall.cpp  KernelIR.cpp  Module.cpp  Operand.cpp  UnitTest.cpp  VariableDeclaration.cpp
harmony/harmony/hir/interface/: ControlCall.h  ControlFlowGraph.h  DataflowInformation.h  HirManager.h  KernelCall.h  KernelIR.h  Module.h  Operand.h  UnitTest.h  VariableDeclaration.h
harmony/harmony/hir/protocol/: KernelIR.proto
harmony/harmony/llvm/implementation/: LLVMInstruction.cpp  LLVMKernel.cpp  LLVMState.cpp  LLVMStatement.cpp
harmony/harmony/llvm/interface/: LLVMInstruction.h  LLVMKernel.h  (+2 more)
harmony/harmony/tools/: harmony-runtime.cpp
harmony/pkgconfig/: libprotobuf-lite.la
harmony/scripts/: build_environment.py
protobuf-2.4.1/: Makefile  config.status  libtool  protobuf-lite.pc  protobuf.pc
protobuf-2.4.1/gtest/: Makefile  config.status  libtool
protobuf-2.4.1/gtest/scripts/: gtest-config
protobuf-2.4.1/src/: Makefile  libprotobuf-lite.la  libprotobuf.la  libprotoc.la  protoc
protobuf-2.4.1/src/.deps/: command_line_interface.Plo  cpp_enum.Plo  cpp_enum_field.Plo  cpp_extension.Plo  cpp_field.Plo  cpp_file.Plo  cpp_generator.Plo  cpp_helpers.Plo  cpp_message.Plo  cpp_message_field.Plo  cpp_primitive_field.Plo  cpp_service.Plo  cpp_string_field.Plo  descriptor.Plo  descriptor.pb.Plo  descriptor_database.Plo  dynamic_message.Plo  extension_set.Plo  extension_set_heavy.Plo  generated_message_reflection.Plo  generated_message_util.Plo  importer.Plo  java_enum.Plo  java_enum_field.Plo  java_extension.Plo  java_field.Plo  java_file.Plo  java_generator.Plo  java_helpers.Plo  java_message.Plo  java_message_field.Plo  java_primitive_field.Plo  java_service.Plo  java_string_field.Plo  parser.Plo  plugin.Plo  plugin.pb.Plo  python_generator.Plo  repeated_field.Plo  subprocess.Plo  (+2 more)
protobuf-2.4.1/src/.libs/: libprotobuf-lite.so.7.0.0  libprotobuf.lai  protoc
redfox/: AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  TC  TC1  TC_Output  config.status  configure  configure.ac  configure.h  configure.h.in  logicQ1_Output
redfox/.deps/: RedFox-RedFox.Po  libredfox_a-ArgumentParser.Po  libredfox_a-BloxCompiler.pb.Po  libredfox_a-CudaCompilerInterface.Po  libredfox_a-Exception.Po  libredfox_a-HarmonyIR.pb.Po  libredfox_a-HarmonyIRPrinter.Po  libredfox_a-LowLevelTimer.Po  libredfox_a-RelationalAlgebra.pb.Po  libredfox_a-RelationalAlgebraCompiler.Po  libredfox_a-RelationalAlgebraKernel.Po  libredfox_a-Timer.Po  libredfox_a-debug.Po  libredfox_a-string.Po
redfox/autom4te.cache/: output.0  requests  traces.0  traces.1
redfox/redfox/driver/implementation/: RedFox.cpp
redfox/redfox/driver/interface/: RedFox.h
redfox/redfox/nvcc/implementation/: CudaCompilerInterface.cpp  RelationalAlgebraCompiler.cpp  RelationalAlgebraKernel.cpp
redfox/redfox/nvcc/interface/: CudaCompilerInterface.h  RelationalAlgebraCompiler.h  RelationalAlgebraKernel.h
redfox/redfox/protocol/implementation/: BloxCompiler.pb.cc  HarmonyIR.pb.cc  HarmonyIRPrinter.cpp  RelationalAlgebra.pb.cc
redfox/redfox/protocol/interface/: BloxCompiler.pb.h  BloxCompiler.proto  HarmonyIR.pb.h  HarmonyIR.proto  HarmonyIRPrinter.h  RelationalAlgebra.pb.h  RelationalAlgebra.proto  q1.man.cpp
redfox/redfox/ra/implementation/: DeviceVectorWrapper.cu  Difference.cu  GpuPrimitives.cu  GpuPrimitives.inl  Map.cu  ModernGPUJoin.cu  ModernGPUSort.cu  Reduce.cu  Sort.cu  Union.cu  Unique.cu  b40cSort.cu
redfox/redfox/ra/interface/: Aggregate.h  Assign.h  Comparisons.h  ConditionalBranch.h  Copy.h  DataTypes.h  Date.h  DetailedImplementations.h  DeviceVectorWrapper.h  Difference.h  GpuPrimitives.h  Increment.h  Join.h  Map.h  MapOperator.h  ModernGPUJoin.h  ModernGPUSort.h  Operators.h  Product.h  Project.h  Reduce.h  Scan.h  Select.h  SetCommon.h  SetDifference.h  SetIntersection.h  SetIntersectionWithDecompression.h  SetUnion.h  Sort.h  Split_Merge.h  Tuple.h  Union.h  Unique.h  b40cSort.h
redfox/redfox/ra/interface/moderngpu/include/: mgpuhost.cuh
redfox/redfox/ra/interface/moderngpu/include/device/: ctasearch.cuh  launchbox.cuh
redfox/redfox/ra/interface/moderngpu/include/kernels/: join.cuh  merge.cuh  mergesort.cuh  reduce.cuh  scan.cuh  search.cuh  sortedsearch.cuh
redfox/redfox/ra/interface/moderngpu/src/: mgpucontext.cpp
redfox/redfox/ra/test/: TestGpuPrimitives.cpp  TestGpuPrimitives.h  TestIntersectionPerformance.cpp  TestIntersectionPerformance.h  TestJoin.cu  TestMap.cpp  TestMap.h
(+31 files in other folders)
